# WesnothServer

./: .gitmodules  CMakeLists.txt  README.md  config.ini  vcpkg.json
Source/: Banner.txt  ClientHandler.cpp  ClientHandler.hpp  Config.cpp  Config.hpp  Gzip.cpp  Gzip.hpp  Main.cpp  PoolAllocator.hpp  ProgramOptions.cpp  ProgramOptions.hpp  Server.cpp  Server.hpp  Utility.cpp  Utility.hpp  Versions.hpp
